[tool.poetry]
name = "sla-calculator"
version = "1.0.0"
description = "A python module that will calculate the sla time based on working hours and holidays."
authors = ["Michael Butler <michael.butler@swimlane.com>"]
readme = "README.md"
homepage = "https://github.com/swimlane/sla_calculator"

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
pendulum = "2.1.2"
holidays = "0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
